<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parra.lfelipe.database.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <LinearLayout
                android:id="@+id/llRestaurante"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/restaurantes"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurantes"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llBares"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bares"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bares"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares"
                android:id="@+id/llHospitales">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hospitales"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospitales"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares"
                android:id="@+id/llUniversidades">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/universidad"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/universidad"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares"
                android:id="@+id/llBarberias">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/barbershop"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barberias"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares"
                android:id="@+id/llCompras">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mercado"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Compras"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares"
                android:id="@+id/llHoteles">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hoteles"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hoteles"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares"
                android:id="@+id/llVeterinarias">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/veterinarias"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veterinarias"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:orientation="vertical"
                android:background="@drawable/formas"
                android:onClick="listarLugares"
                android:id="@+id/llCine">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cine"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cines"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
